--- a/src/pages/Dashboard/profileMain.scss
+++ b/src/pages/Dashboard/profileMain.scss
@@ -275,14 +275,10 @@
       flex-wrap: nowrap;
       overflow-x: auto;
       scrollbar-width: none;
-      &::-webkit-scrollbar {
-        width: 3px;
-      }
-
-      &::-webkit-scrollbar-thumb {
-        width: 2px;
-        background-color: #2596be;
-        border-radius: 3px;
+      &::-webkit-scrollbar-thumb,
+      &::-webkit-scrollbar-track,
+      ::-webkit-scrollbar {
+        display: none;
       }
     }
   }
